--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,13 @@ spring:
     driver-class-name: org.postgresql.Driver
 
   jpa:
+    database: postgresql
     show-sql: true
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+
